# Calculadora-AlgebraLineal

./: README.md  cramer.py  determinantes.py  eliminacion_gaussiana.py  gauss_jordan.py  independencia_lineal.py  main.py  matriz_inversa.py  operaciones_matrices.py  programa.py  pyproject.toml
app/: __init__.py  main_window.py  routes.py  web_utils.py
app/gui/: common_widgets.py
app/gui/windows/: gauss_jordan_window.py
app/logic/: __init__.py  biseccion.py  cramer.py  determinante.py  determinantes.py  eliminacion_gaussiana.py  falsa_posicion.py  gauss_jordan.py  independencia_lineal.py  matriz_inversa.py  metodo_tangente.py  multiplicacion_matrices.py  newton_raphson.py  operaciones_matrices.py  rref.py  todas_las_raices.py  traspuesta.py  utils.py
app/operations/: __init__.py  eliminacion_gaussiana.py  gauss_jordan.py  utils.py
app/static/: style.css
app/static/css/: biseccion.css  form.css  general.css  imagenes.css  main.css  matrices.css  messages.css  pasos.css  style.css
app/static/js/: biseccion_preview.js  (+5 more)
app/templates/: Gauss-Jordan.html  Gauss.html  _entrada_matrices.html  _entrada_matriz_cuadrada.html  _entrada_vectores.html  _multiplicacion_matrices.html  base.html  biseccion.html  cramer.html  determinante.html  eliminacion_gaussiana.html  falsa_posicion.html  gauss_jordan.html  independencia_lineal.html  index.html  informacion.html  matriz_inversa.html  metodo_tangente.html  metodos_numericos.html  newton_raphson.html  operaciones_matrices.html  rref.html  sistemas.html  todas_las_raices.html  traspuesta.html
static/css/: general.css
(+15 files in other folders)
