[tool.poetry]
name = "calculadora-algebralineal"
version = "0.1.0"
description = "calculadora de algebra lineal hecha en python para resolver sistemas de ecuaciones matriciales y demas operaciones utilizando pyqt para interfaz grafica"
authors = ["GabJuarez <gajuarez@uamv.edu.ni>"]
readme = "README.md"
packages = [{include = "calculadora_algebralineal"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
